[gd_scene load_steps=2 format=3 uid="uid://ddh37x3gwl3gb"]

[ext_resource type="Script" path="res://upgradeselect.gd" id="1_h3pd5"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h3pd5")

[node name="Speed_Upgrade" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.563
anchor_bottom = 0.655
offset_left = 513.0
offset_top = 299.0
offset_right = 546.48
offset_bottom = 303.8
text = "Speed"

[node name="Damage_Upgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 298.0
offset_right = 496.0
offset_bottom = 329.0
text = "Damage"

[node name="Fire_Rate_Upgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 611.0
offset_top = 298.0
offset_right = 688.0
offset_bottom = 329.0
text = "Fire Rate"

[node name="Reload_Speed_Upgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 336.0
offset_right = 607.0
offset_bottom = 367.0
text = "Reload Speed"

[node name="Ammo_Upgrade" type="Button" parent="."]
layout_mode = 0
offset_left = 515.0
offset_top = 256.0
offset_right = 588.0
offset_bottom = 287.0
text = "Ammo"

[connection signal="pressed" from="Speed_Upgrade" to="." method="_on_speed_upgrade_pressed"]
[connection signal="pressed" from="Damage_Upgrade" to="." method="_on_damage_upgrade_pressed"]
[connection signal="pressed" from="Fire_Rate_Upgrade" to="." method="_on_fire_rate_upgrade_pressed"]
[connection signal="pressed" from="Reload_Speed_Upgrade" to="." method="_on_reload_speed_upgrade_pressed"]
[connection signal="pressed" from="Ammo_Upgrade" to="." method="_on_ammo_upgrade_pressed"]
